--- a/module-2/07_Database_Connectivity_DAO/student-lecture/WorldDB/WorldDB/appsettings.json
+++ b/module-2/07_Database_Connectivity_DAO/student-lecture/WorldDB/WorldDB/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
     //TODO: Add the connection string here for database World
-    "World": ""
+    "World": "Server=.\\SQLExpress; Database=World; Trusted_Connection=True;"
   }
 }
