--- a/module-2/07_Database_Connectivity_DAO/student-exercise/ProjectOrganizer/appsettings.json
+++ b/module-2/07_Database_Connectivity_DAO/student-exercise/ProjectOrganizer/appsettings.json
@@ -1,5 +1,5 @@
 {  
   "ConnectionStrings": {
-    "Project": "[ENTER_YOUR_CONNECTION_STRING_HERE]",
+    "Project": "Server=.\\SQLExpress; Database=EmployeeDB; Trusted_Connection=True;",
   }
 }
